feat: update login borrow and return book, update api doc
